# SDRAPP

./: ARCHITECTURE_CRITIQUE_RESPONSE.md  AUDIT_REPORT.md  DEPLOYMENT-GX10-ALPHA.md  DEPLOYMENT.md  DEPLOYMENT_README.md  FRONTEND-BACKEND-GAPS.md  GAPS-AUDIT.md  PRODUCTION_DEPLOYMENT.md  PROJECT_COMPLETION_PHASES.md  REFACTORING_AUDIT.md  SDR_MODE_GUIDE.md  SERENA_AUDIT_REPORT.md  TODO-CRITICAL.md  install.sh  package-lock.json  package.json  pnpm-lock.yaml  todo.md  vite.config.ts
.manus/db/: db-query-1767297602624.json  db-query-1767297606305.json  db-query-1767297935002.json  db-query-1767304665929.json
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/_core/hooks/: useAuth.ts
client/src/components/: BookmarkPanel.tsx  Breadcrumb.tsx  CommandPalette.tsx  DashboardLayout.tsx  ErrorDisplay.tsx  FeedbackButton.tsx  FloatingAIChat.tsx  FrequencyBookmarks.tsx  GainPresets.tsx  GlobalAIChat.tsx  GradientEditor.tsx  HardwareStatus.tsx  KeyboardShortcuts.tsx  LoadingSkeleton.tsx  LogViewer.tsx  OptimizedSpectrograph.tsx  SDRLayout.tsx  ScanProgressIndicator.tsx  SentryErrorBoundary.tsx  SentryStatusWidget.tsx  SpectrographDisplay.tsx  SpectrographDisplayWithDetection.tsx  VelocityFrequencyDrag.tsx  WaterfallDisplay.tsx  WebSocketDiagnostics.tsx  WebSocketStatus.tsx
client/src/contexts/: GPUMetricsContext.tsx
client/src/hooks/: useFrequencyDrag.ts  useSDRControls.ts  useWebSocket.ts  useWebSocketFFT.ts
client/src/lib/: breadcrumbs.ts  colorMaps.ts  gain-presets.ts  logger.ts  presetBookmarks.ts  sentry.ts  sigmf.ts
client/src/pages/: AIAssistant.tsx  ComponentShowcase.tsx  Dashboard.tsx  Device.tsx  DeviceSelector.tsx  Recording.tsx  Scanner.tsx  Settings.tsx  Spectrum.tsx  Telemetry.tsx
docs/: ARCHITECTURE.md  CPP-BACKEND-REVIEW.md
drizzle/: 0001_hesitant_hemingway.sql  0002_brown_maestro.sql  0003_special_maelstrom.sql  0004_lively_jasper_sitwell.sql  0005_magenta_wolfsbane.sql  0007_tense_aaron_stack.sql  0008_plain_shinko_yamashiro.sql  0009_needy_sir_ram.sql  0010_wild_northstar.sql  0011_deep_rachel_grey.sql  0012_ordinary_edwin_jarvis.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  _journal.json
hardware/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  DEPLOYMENT_WALKTHROUGH.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  TROUBLESHOOTING.md  VERIFICATION_CHECKLIST.md  deploy_to_gx10.sh  install_dependencies.sh  remote_compile.sh  test_deployment.sh  verify_b210.sh  verify_build.sh
hardware/src/: device_enumerator.cpp  freq_scanner.cpp  iq_recorder.cpp  sdr_streamer.cpp  sdr_streamer_binary.cpp.example  shared_fft_buffer.hpp  soapy_recorder.cpp  soapy_scanner.cpp  soapy_streamer.cpp
server/: ai-analysis.test.ts  ai-conversation.test.ts  ai-router.ts  bookmark-edit-export.test.ts  bookmark-recording.test.ts  bookmark-router.ts  bookmark.test.ts  demo-hardware-manager.ts  device-list-router.ts  device-router.ts  device-selection.test.ts  device.getInfo.test.ts  gain-presets.test.ts  gap-fixes.test.ts  gpu-router.ts  hardware-manager-factory.ts  hardware-manager.ts  hardware-manager.ts.backup  hardware-types.ts  hardware.ts  health-router.ts  historical-analysis.test.ts  iq-analysis.test.ts  log-storage.ts  logger.ts  production-hardware-manager.ts  production-hardware.ts  recording-router.ts  recording-upload.test.ts  routers.ts  scanner-router.ts  sdr-db.ts  sdr-routers.test.ts  sdr-routers.ts  sdr.test.ts  sentry-api.ts  sentry.test.ts  sentry.ts  settings-router.ts  shared-memory-reader.ts  (+2 more)
server/_core/: context.ts  env.ts  index.ts  logger.ts  rateLimiter.ts  systemRouter.ts
server/examples/: binary-hardware-manager.ts.example
server/utils/: error-utils.ts  hardware-utils.ts
shared/: api-contracts.ts  sdr-types.ts  validation.ts
